--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         header {
             text-align: center;
-            margin-bottom: 4rem;
+            margin-bottom: 2rem;
             animation: fadeInDown 1s ease-out;
         }
 
@@ -194,7 +194,7 @@
 
         .quote {
             text-align: center;
-            margin-top: 4rem;
+            margin-top: 2rem;
             font-size: 1.4rem;
             color: #5d4037;
             font-style: italic;
@@ -288,7 +288,7 @@
                             </svg>
                         </div>
                     </div>
-                <div class="photo-caption">A moment in time</div>
+                <div class="photo-caption">A moment in time V 🖤</div>
             </div>
         </div>
 
